build(deps): add LuckPerms API (compileOnly) and PaperMC repo

--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,4 @@
-plugins {
+﻿plugins {
     id 'fabric-loom' version '1.11-SNAPSHOT'
     id 'maven-publish'
     id 'java'
@@ -54,16 +54,24 @@ fabricApi {
 }
 
 repositories {
-    // Add repositories to retrieve artifacts from in here.
-    // You should only use this when depending on other mods because
-    // Loom adds the essential maven repositories to download Minecraft and libraries from automatically.
-    // See https://docs.gradle.org/current/userguide/declaring_repositories.html
-    // for more information about repositories.
+    mavenCentral()
+    maven { url = "https://maven.fabricmc.net/" } // Fabric / Loom
+    maven { url = "https://repo.spongepowered.org/repository/maven-public/" } // you already had this
+    maven { url = "https://repo.papermc.io/repository/maven-public/" } // LuckPerms API
+    maven { url = "https://jitpack.io" } // fallback if needed
 }
 
 dependencies {
     // To change the versions see the gradle.properties file
     minecraft "com.mojang:minecraft:${project.minecraft_version}"
+    mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
+    modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
+
+    modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
+
+    // LuckPerms: compile against API, runtime jar sits in server mods folder
+    compileOnly "net.luckperms:api:${project.luckperms_api_version}"
+}"
     mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
     modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
 
@@ -123,9 +131,10 @@ publishing {
 
     // See https://docs.gradle.org/current/userguide/publishing_maven.html for information on how to set up publishing.
     repositories {
-        // Add repositories to publish to here.
-        // Notice: This block does NOT have the same function as the block in the top level.
-        // The repositories here will be used for publishing your artifact, not for
-        // retrieving dependencies.
-    }
+    mavenCentral()
+    maven { url = "https://maven.fabricmc.net/" } // Fabric / Loom
+    maven { url = "https://repo.spongepowered.org/repository/maven-public/" } // you already had this
+    maven { url = "https://repo.papermc.io/repository/maven-public/" } // LuckPerms API
+    maven { url = "https://jitpack.io" } // fallback if needed
+}
 }
