--- a/gradle.properties
+++ b/gradle.properties
@@ -12,3 +12,5 @@ archives_base_name=sentinelcore
 # Dependencies
 # check this on https://modmuss50.me/fabric.html
 fabric_version=0.136.0+1.21.10
+
+luckperms_api_version=5.4
