chore: remove duplicate entrypoint and fix encoding/formatting; build passes

--- a/gradle.properties
+++ b/gradle.properties
@@ -14,3 +14,7 @@ archives_base_name=sentinelcore
 fabric_version=0.136.0+1.21.10
 
 luckperms_api_version=5.4
+
+luckperms_api_version=5.4
+
+luckperms_api_version=5.4
