--- a/build.gradle
+++ b/build.gradle
@@ -1,9 +1,7 @@
-﻿plugins {
+plugins {
     id 'fabric-loom' version '1.11-SNAPSHOT'
     id 'maven-publish'
     id 'java'
-    // id 'pmd'
-    // id 'checkstyle'
     id 'com.diffplug.spotless' version '6.25.0'
 }
 
@@ -14,29 +12,15 @@ spotless {
     }
 }
 
-/*
-pmd {
-    toolVersion = '6.55.0'
-    ignoreFailures = true
-    ruleSets = []
-    ruleSetFiles = files('config/pmd/rules.xml')
-}
-
-checkstyle {
-    toolVersion = '10.17.0'
-    configFile = file('config/checkstyle/checkstyle.xml')
-    ignoreFailures = true
-}
-*/
-
 version = project.mod_version
-group = project.maven_group
+group   = project.maven_group
 
 base {
     archivesName = project.archives_base_name
 }
 
 loom {
+    // you can keep a client source set even if you don't use it
     splitEnvironmentSourceSets()
 
     mods {
@@ -47,59 +31,58 @@ loom {
     }
 }
 
+/*
+ * If you actually use Fabric API data generation, you can uncomment this block.
+ * It requires the Fabric API datagen setup in your project.
+ *
 fabricApi {
     configureDataGeneration {
         client = true
     }
 }
+*/
 
 repositories {
     mavenCentral()
     maven { url = "https://maven.fabricmc.net/" } // Fabric / Loom
-    maven { url = "https://repo.spongepowered.org/repository/maven-public/" } // you already had this
+    maven { url = "https://repo.spongepowered.org/repository/maven-public/" } // you had this
     maven { url = "https://repo.papermc.io/repository/maven-public/" } // LuckPerms API
     maven { url = "https://jitpack.io" } // fallback if needed
 }
 
 dependencies {
-    // To change the versions see the gradle.properties file
-    minecraft "com.mojang:minecraft:${project.minecraft_version}"
-    mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
+    // Versions are defined in gradle.properties
+    minecraft      "com.mojang:minecraft:${project.minecraft_version}"
+    mappings       "net.fabricmc:yarn:${project.yarn_mappings}:v2"
     modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
 
+    // Fabric API for 1.21.10
     modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
 
-    // LuckPerms: compile against API, runtime jar sits in server mods folder
+    // LuckPerms: compile against API; runtime jar goes in the server /mods folder
     compileOnly "net.luckperms:api:${project.luckperms_api_version}"
-}"
-    mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
-    modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
-
-    modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
 }
 
 processResources {
-    inputs.property "version", project.version
+    inputs.property "version",           project.version
     inputs.property "minecraft_version", project.minecraft_version
-    inputs.property "loader_version", project.loader_version
+    inputs.property "loader_version",    project.loader_version
     filteringCharset "UTF-8"
 
     filesMatching("fabric.mod.json") {
-        expand "version": project.version,
-                "minecraft_version": project.minecraft_version,
-                "loader_version": project.loader_version
+        expand(
+            "version":            project.version,
+            "minecraft_version":  project.minecraft_version,
+            "loader_version":     project.loader_version
+        )
     }
 }
 
 def targetJavaVersion = 21
 tasks.withType(JavaCompile).configureEach {
-    // ensure that the encoding is set to UTF-8, no matter what the system default is
-    // this fixes some edge cases with special characters not displaying correctly
-    // see http://yodaconditions.net/blog/fix-for-java-file-encoding-problems-with-gradle.html
-    // If Javadoc is generated, this must be specified in that task too.
-    it.options.encoding = "UTF-8"
+    options.encoding = "UTF-8"
     if (targetJavaVersion >= 10 || JavaVersion.current().isJava10Compatible()) {
-        it.options.release.set(targetJavaVersion)
+        options.release.set(targetJavaVersion)
     }
 }
 
@@ -108,9 +91,6 @@ java {
     if (JavaVersion.current() < javaVersion) {
         toolchain.languageVersion = JavaLanguageVersion.of(targetJavaVersion)
     }
-    // Loom will automatically attach sourcesJar to a RemapSourcesJar task and to the "build" task
-    // if it is present.
-    // If you remove this line, sources will not be generated.
     withSourcesJar()
 }
 
@@ -120,7 +100,6 @@ jar {
     }
 }
 
-// configure the maven publication
 publishing {
     publications {
         create("mavenJava", MavenPublication) {
@@ -128,13 +107,7 @@ publishing {
             from components.java
         }
     }
-
-    // See https://docs.gradle.org/current/userguide/publishing_maven.html for information on how to set up publishing.
     repositories {
-    mavenCentral()
-    maven { url = "https://maven.fabricmc.net/" } // Fabric / Loom
-    maven { url = "https://repo.spongepowered.org/repository/maven-public/" } // you already had this
-    maven { url = "https://repo.papermc.io/repository/maven-public/" } // LuckPerms API
-    maven { url = "https://jitpack.io" } // fallback if needed
-}
+        // Add publishing targets if/when you need them
+    }
 }
