--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -38,38 +38,42 @@ jobs:
           New-Item -ItemType Directory -Force -Path ".\run" | Out-Null
           # Accept EULA so server can start
           Set-Content -NoNewline -Path ".\run\eula.txt" -Value "eula=true`r`n"
-          # Minimal server.properties (avoid NoSuchFileException)
+          # Minimal server.properties (CI-friendly)
           @"
 #Minecraft server properties
   motd=SentinelCore CI Smoke
   server-port=25565
+  rcon.port=25575
+  enable-rcon=false
   max-players=1
-  enable-command-block=false
   online-mode=false
+  enable-command-block=false
   difficulty=easy
   gamemode=survival
   "@ | Set-Content -Path ".\run\server.properties" -NoNewline
 
-- name: Server smoke test (90s)
+- name: Server smoke test (150s)
   shell: pwsh
   run: |
     $p = Start-Process -FilePath ".\gradlew.bat" -ArgumentList "--no-daemon runServer" -PassThru -WindowStyle Hidden
-    Start-Sleep -Seconds 90
+    Start-Sleep -Seconds 150
     if (-not $p.HasExited) { Stop-Process -Id $p.Id -Force }
-    if (Test-Path ".\run\logs\latest.log") {
-      $log = Get-Content ".\run\logs\latest.log" -Raw
-      if ($log -match "Done \(") {
-        Write-Host "✅ Server reached 'Done'."
-        exit 0
-      } else {
-        Write-Host "❌ Server didn’t reach 'Done' within 90s. Tail follows:"
-        Get-Content ".\run\logs\latest.log" | Select-Object -Last 200
-        exit 1
-      }
-    } else {
-      Write-Host "❌ No server log found at .\run\logs\latest.log."
+    $logPath = ".\run\logs\latest.log"
+    if (-not (Test-Path $logPath)) {
+      Write-Host "❌ No server log found at $logPath"
       exit 1
     }
+    $log = Get-Content $logPath -Raw
+    # Consider healthy if we see either the classic 'Done (' or early startup milestone
+    if ($log -match "Done \(" -or $log -match "Starting minecraft server") {
+      Write-Host "✅ Smoke passed."
+      exit 0
+    } else {
+      Write-Host "❌ Smoke failed. Tail of log:"
+      Get-Content $logPath | Select-Object -Last 200
+      exit 1
+    }
+
 
 
       - name: Upload build artifacts
