--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -5,6 +5,7 @@ on:
     branches: [ "dev", "feature/**" ]
   pull_request:
     branches: [ "dev", "feature/**" ]
+  workflow_dispatch:
 
 permissions:
   contents: read
