--- a/build.gradle
+++ b/build.gradle
@@ -61,6 +61,9 @@ dependencies {
 
     // LuckPerms: compile against API; runtime jar goes in the server /mods folder
     compileOnly "net.luckperms:api:${project.luckperms_api_version}"
+
+    implementation("com.fasterxml.jackson.core:jackson-databind:2.17.2")
+    implementation("com.fasterxml.jackson.dataformat:jackson-dataformat-yaml:2.17.2")
 }
 
 processResources {
