Feature/phase 0 issue 1 init (#24)
* feat(phase-0): central logger with categories (audit, perm, move, modmode, spawn)

* feat(phase-0): YAML/JSON config loader with defaults and hot-reload watcher

* feat(phase-0): feature flag registry backed by config with hot-reload

* feat(phase-0): wire config/flags/logger into mod initializer

* chore(phase-0): ensure modid sentinelcore; sample config; ignore run/build artifacts

* fix(phase-0): correct fabric.mod.json deps (minecraft=1.21.10, java>=21)

* chore(phase-0): finalize local runServer bootstrap

* chore(phase-0): address Qodana warnings (resource handling, loop guard)

* chore(phase-0): use try-with-resources for config I/O; keep watcher loop interruptible

* chore(qodana): suppress false-positive AutoCloseable warning in watcher; add executor shutdown hook

* chore(qodana): wrap config I/O in try-with-resources; narrow suppression on watcher

* chore(qodana): remove ExecutorService; run config watcher on daemon thread with shutdown hook

* ci(qodana): retrigger scan at HEAD e2f6375

--- a/build.gradle
+++ b/build.gradle
@@ -61,7 +61,42 @@ dependencies {
 
     // LuckPerms: compile against API; runtime jar goes in the server /mods folder
     compileOnly "net.luckperms:api:${project.luckperms_api_version}"
+
+    implementation("com.fasterxml.jackson.core:jackson-databind:2.17.2")
+    implementation("com.fasterxml.jackson.dataformat:jackson-dataformat-yaml:2.17.2")
 }
+
+// Auto-create EULA and server.properties before runServer
+tasks.named("runServer") { t ->
+    doFirst {
+        // Prefer the task's workingDir if Loom sets it; otherwise use project directory / run
+        File runDir = (t.hasProperty('workingDir') && t.workingDir instanceof File && t.workingDir)
+                ? t.workingDir as File
+                : layout.projectDirectory.dir("run").asFile
+
+        if (!runDir.exists()) {
+            runDir.mkdirs()
+        }
+
+        File eula = new File(runDir, "eula.txt")
+        if (!eula.exists()) {
+            eula.text = "eula=true" + System.lineSeparator()
+            println "Created ${eula.absolutePath}"
+        }
+
+        File props = new File(runDir, "server.properties")
+        if (!props.exists()) {
+            props.text = """#Minecraft server properties
+motd=SentinelCore Dev
+server-port=25565
+online-mode=false
+max-players=20
+"""
+            println "Created ${props.absolutePath}"
+        }
+    }
+}
+
 
 processResources {
     inputs.property "version",           project.version
