chore: reorganize project structure and cleanup root directory
- Move planning docs to docs/ (issues.json, TECHNICAL_BLUEPRINT.md)
- Remove duplicate LICENSE.txt (keep LICENSE)
- Remove temporary trigger.md
- Remove root server files (eula.txt, server.properties already in run/)
- Update .gitignore to exclude root-level server files
- Add docs/README.md with documentation index
- Add .github/PULL_REQUEST_TEMPLATE.md for consistent PRs

--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,12 @@ logs/
 run/
 crash-reports/
 *.log
+
+# Root-level server files (these belong in run/)
+/eula.txt
+/server.properties
+/banned-ips.json
+/banned-players.json
+/ops.json
+/usercache.json
+/whitelist.json
