feat(vscode): add debug configuration for Minecraft client
- Added Debug Minecraft Client configuration on port 5006 to launch.json
- Updated Run Server task to enable JDWP debugging on port 5005
- Updated Run Client task to enable JDWP debugging on port 5006
- Added debugging section to .vscode/README.md with instructions

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -60,7 +60,7 @@
 		{
 			"label": "Run Server",
 			"type": "shell",
-			"command": ".\\gradlew.bat runServer",
+			"command": ".\\gradlew.bat runServer -Dorg.gradle.jvmargs=\"-agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=*:5005\"",
 			"problemMatcher": [],
 			"isBackground": true,
 			"group": {
@@ -76,7 +76,7 @@
 		{
 			"label": "Run Client",
 			"type": "shell",
-			"command": ".\\gradlew.bat runClient",
+			"command": ".\\gradlew.bat runClient -Dorg.gradle.jvmargs=\"-agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=*:5006\"",
 			"problemMatcher": [],
 			"isBackground": true,
 			"group": "test",
