--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,13 +1,21 @@
 {
-	"version": "0.2.0",
-	"configurations": [
-		{
-			"type": "java",
-			"name": "Debug Minecraft Server",
-			"request": "attach",
-			"hostName": "localhost",
-			"port": 5005,
-			"preLaunchTask": "Run Server"
-		}
-	]
+  "version": "0.2.0",
+  "configurations": [
+    {
+      "type": "java",
+      "name": "Debug Minecraft Server",
+      "request": "attach",
+      "hostName": "localhost",
+      "port": 5005,
+      "preLaunchTask": "Run Server"
+    },
+    {
+      "type": "java",
+      "name": "Debug Minecraft Client",
+      "request": "attach",
+      "hostName": "localhost",
+      "port": 5006,
+      "preLaunchTask": "Run Client"
+    }
+  ]
 }
